src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@out2-wfsBN-spA2.snap
---
source: src/tests/window_opening.rs
description: "open on output: headless-2\nwant fullscreen: BN\nset parent: A2"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

post-map configures:


unfullscreen configure:
size: 0 × 0, bounds: 1900 × 1060, states: []
